@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2022-10-18T16:46:19Z",
-  "count_outdated" : 39,
-  "uniques_outdated" : 13,
-  "count" : 42,
-  "uniques" : 14,
+  "timestamp" : "2022-11-10T02:14:18Z",
+  "count_outdated" : 42,
+  "uniques_outdated" : 14,
+  "count" : 45,
+  "uniques" : 15,
   "views" : [
     {
-      "timestamp": "2022-10-18T00:00:00Z",
+      "timestamp": "2022-11-09T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "uniques": 1,
